Changes
=======

0.00013
  * Change all_* accessors back to what they were in 0.00011
  * Separate out BerkeleyDB tests, fix them
  * DEPRECATION WARNING!
    - Gettext.pm
        * path_add        -> add_path
        * lexicon_get     -> get_lexicon
        * lexicon_set     -> set_lexicon
        * lexicon_merge   -> merge_lexicon
        * lexicon_map_get -> get_lexicon_map
        * lexicon_map_set -> set_lexicon_map
    - Namespace.pm
        * lexicon_get     -> get_lexicon
    - Auto.pm
        * lexicon_get     -> get_lexicon

0.00012 22 Mar 2010
  * Remove the use of AttributeHelpers -- doing this in Moose/Mouse is a pain
  * Move POD tests to xt
  * Factor out Gettext parser (Dave Rolsky)
  * Only load Gettext lexicons for new paths in path_add (Dave Rolsky)
  * Protect $_ when loading Gettext lexicons (Dave Rolsky)
  * Predeclare class_type (Dave Rolsky)
  * Silence test Warnings (Dave Rolsky)

0.00011 15 Dec 2009
  * Don't attempt to load Namespace lexicons once we failed to load them.
  * Allow method calls for Maketext formats (UNTESTED -- will do more hacking)

0.00010 17 Aug 2009
  * Allow method calls to be made for Gettext formats. For example,
    %foo(1,2,3) will call $localizer->foo(undef, ['1', '2', '3']), and use
    its return value as the localized text (UNTESTED -- will do more hacking)

0.00009 05 Aug 2009
  * Do not allow spurfulous entries in the lexicon hash for gettext

0.00008 04 Aug 2009
  * Add auto_style to determine the auto-fallback style

0.00007 15 Apr 2009
  * Properly handle BerkeleyDB dependency (it's not required)

0.00006 14 Apr 2009
  * Properly cleanse $lang before using it as a namespace

0.00006_01 25 Mar 2009
  * Add a storage backend. This is mainly to cover cases where storing
    many lexicons on memory is not a practical choice
  * API change: lexicon_get() now accepts 2 arguments, and expects
    the translated lexicon back

0.00005 09 Mar 2009
  * Any::Moose me! Requires MouseX::AttributeHandlers and Mouse 0.19