@@ -4,6 +4,9 @@ Changes
 0.00013
   * Change all_* accessors back to what they were in 0.00011
   * Separate out BerkeleyDB tests, fix them
+  * Namespace.pm no longer attempts to load files which failed to
+    load previously. If you want to reflect changes, you need to
+    recreate the object.
   * DEPRECATION WARNING!
     - Gettext.pm
         * path_add        -> add_path
